   - Linux kernel 4.13
     * Add support for compiling OVS with the latest Linux 4.13 kernel
   - ovs-dpctl and related ovs-appctl commands:
     * "flush-conntrack" now accept a 5-tuple to delete a specific
       connection tracking entry.
     * New "ct-set-maxconns", "ct-get-maxconns", and "ct-get-nconns" commands
       for userspace datapath.
   - DPDK:
     * Add support for DPDK v17.11
     * Add support for vHost IOMMU
     * New debug appctl command 'netdev-dpdk/get-mempool-info'.
     * All the netdev-dpdk appctl commands described in ovs-vswitchd man page.
     * Custom statistics:
        - DPDK physical ports now return custom set of "dropped", "error" and
          "management" statistics.
        - ovs-ofctl dump-ports command now prints new of set custom statistics
          if available (for OpenFlow 1.4+).
     * New appctl command 'dpif-netdev/pmd-rxq-rebalance' to rebalance rxq to
       pmd assignments.
     * Add rxq utilization of pmd to appctl 'dpif-netdev/pmd-rxq-show'.
   - Userspace datapath:
     * Output packet batching support.
   - vswitchd:
     * Datapath IDs may now be specified as 0x1 (etc.) instead of 16 digits.
     * Configuring a controller, or unconfiguring all controllers, now deletes
       all groups and meters (as well as all flows).
   - New --enable-sparse configure option enables "sparse" checking by default.
   - Added additional information to vhost-user status.

v2.8.0 - 31 Aug 2017
--------------------
   - ovs-ofctl:
     * ovs-ofctl can now accept and display port names in place of numbers.  By
       default it always accepts names and in interactive use it displays them;
       use --names or --no-names to override.  See ovs-ofctl(8) for details.
     * "ovs-ofctl dump-flows" now accepts --no-stats to omit flow statistics.
   - New ovs-dpctl command "ct-stats-show" to show connection tracking stats.
   - Tunnels:
     * Added support to set packet mark for tunnel endpoint using